--- a/Editor/App.config
+++ b/Editor/App.config
@@ -17,7 +17,7 @@
                 <value>16</value>
             </setting>
             <setting name="ASMExe" serializeAs="String">
-                <value>SICASM.exe</value>
+                <value>SICXEASM.exe</value>
             </setting>
             <setting name="SIMExe" serializeAs="String">
                 <value>SICSIM.exe</value>
@@ -50,10 +50,10 @@ d 1000-1140</value>
                 <value>(?&lt;=[\s,\.])([axbflsti]|ch|xr)(?=[\s,])</value>
             </setting>
             <setting name="IntegerRegex" serializeAs="String">
-                <value>\s[0-9]+\s</value>
+                <value>\s#?[0-9]+\s</value>
             </setting>
             <setting name="DecRegex" serializeAs="String">
-                <value>\s[0-9]*\.[0-9]+\s</value>
+                <value>\s#?[0-9]*\.[0-9]+\s</value>
             </setting>
             <setting name="DataTypeRegex" serializeAs="String">
                 <value>\sword|byte|resb\s</value>
