Default namesapce changed to ASMSharp.

--- a/Editor/App.config
+++ b/Editor/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ASMSharp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="SIC_Editor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,89 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
     <userSettings>
+        <ASMSharp.Properties.Settings>
+            <setting name="ColCellCountArray" serializeAs="String">
+                <value>9,8,18</value>
+            </setting>
+            <setting name="FontSize" serializeAs="String">
+                <value>16</value>
+            </setting>
+            <setting name="ASMExe" serializeAs="String">
+                <value>SICXEASM.exe</value>
+            </setting>
+            <setting name="SIMExe" serializeAs="String">
+                <value>SICSIM.exe</value>
+            </setting>
+            <setting name="ASMArgs" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SIMArgs" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ASMInput" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SIMInput" serializeAs="String">
+                <value>s
+r
+d r
+d 1000-1140</value>
+            </setting>
+            <setting name="ASMScript" serializeAs="String">
+                <value>Rename.bat</value>
+            </setting>
+            <setting name="SyntaxRegex" serializeAs="String">
+                <value>\sa(d(d[r]?)|nd)|c(lear|o(m(p[r]?)))|d(i(v[r]?))|end|j(eq|gt|lt|sub)?|l(d(a|b|ch|l|s|t|x))|m(u(l[r]?))|or|r(d|mo|sub)|s(h(i(f(t[lr])))|t(a(rt)?|b|ch|l|s|t|x)|u(b[r]?))|t(d|i(x[r]?))|wd\s</value>
+            </setting>
+            <setting name="LabelRegex" serializeAs="String">
+                <value>(?&lt;=\n)[^\s]+(?=\s)</value>
+            </setting>
+            <setting name="RegisterRegex" serializeAs="String">
+                <value>(?&lt;=[\s,\.])([axbflsti]|ch|xr)(?=[\s,])</value>
+            </setting>
+            <setting name="IntegerRegex" serializeAs="String">
+                <value>(?&lt;=[\s#])([0-9]+)(?=[\s,])</value>
+            </setting>
+            <setting name="DecRegex" serializeAs="String">
+                <value>(?&lt;=[\s#])([0-9]*\.[0-9]+)(?=[\s,])</value>
+            </setting>
+            <setting name="DataTypeRegex" serializeAs="String">
+                <value>\sword|byte|resb\s</value>
+            </setting>
+            <setting name="SyntaxColor" serializeAs="String">
+                <value>Blue</value>
+            </setting>
+            <setting name="LabelColor" serializeAs="String">
+                <value>Brown</value>
+            </setting>
+            <setting name="RegisterColor" serializeAs="String">
+                <value>Red</value>
+            </setting>
+            <setting name="IntegerColor" serializeAs="String">
+                <value>Orange</value>
+            </setting>
+            <setting name="DecColor" serializeAs="String">
+                <value>Green</value>
+            </setting>
+            <setting name="DataTypeColor" serializeAs="String">
+                <value>DarkCyan</value>
+            </setting>
+            <setting name="CodeBackColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="CodeForeColor" serializeAs="String">
+                <value>White</value>
+            </setting>
+            <setting name="ConsoleFontSize" serializeAs="String">
+                <value>8</value>
+            </setting>
+            <setting name="ConsoleBackColor" serializeAs="String">
+                <value>Blue</value>
+            </setting>
+            <setting name="ConsoleForeColor" serializeAs="String">
+                <value>White</value>
+            </setting>
+        </ASMSharp.Properties.Settings>
         <SIC_Editor.Properties.Settings>
             <setting name="ColCellCountArray" serializeAs="String">
                 <value>9,8,18</value>
