--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A17165AC-82EE-42DA-835A-BB72220C02A0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SIC_Editor</RootNamespace>
-    <AssemblyName>SIC Editor</AssemblyName>
+    <RootNamespace>ASMSharp</RootNamespace>
+    <AssemblyName>ASMSharp</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
