Visual bug fixes affecting: CodeBox,Regular Expressions

--- a/Editor/App.config
+++ b/Editor/App.config
@@ -42,7 +42,7 @@ d 1000-1140</value>
                 <value>Rename.bat</value>
             </setting>
             <setting name="SyntaxRegex" serializeAs="String">
-                <value>\sa(d(d[r]?)|nd)|c(lear|o(m(p[r]?)))|d(i(v[r]?))|end|j(eq|gt|lt|sub)?|l(d(a|b|ch|l|s|t|x))|m(u(l[r]?))|or|r(d|mo|sub)|s(h(i(f(t[lr])))|t(a(rt)?|b|ch|l|s|t|x)|u(b[r]?))|t(d|i(x[r]?))|wd\s</value>
+                <value>\s(a(d(d[r]?)|nd)|c(lear|o(m(p[r]?)))|d(i(v[r]?))|end|j(eq|gt|lt|sub)?|l(d(a|b|ch|l|s|t|x))|m(u(l[r]?))|or|r(d|mo|sub)|s(h(i(f(t[lr])))|t(a(rt)?|b|ch|l|s|t|x)|u(b[r]?))|t(d|i(x[r]?))|wd)\s</value>
             </setting>
             <setting name="LabelRegex" serializeAs="String">
                 <value>(?&lt;=\n)[^\s]+(?=\s)</value>
@@ -51,13 +51,13 @@ d 1000-1140</value>
                 <value>(?&lt;=[\s,\.])([axbflsti]|ch|xr)(?=[\s,])</value>
             </setting>
             <setting name="IntegerRegex" serializeAs="String">
-                <value>(?&lt;=[\s#])([0-9]+)(?=[\s,])</value>
+                <value>(?&lt;=[\s#])([-0-9]+)(?=[\s,])</value>
             </setting>
             <setting name="DecRegex" serializeAs="String">
-                <value>(?&lt;=[\s#])([0-9]*\.[0-9]+)(?=[\s,])</value>
+                <value>(?&lt;=[\s#])([-0-9]*\.[0-9]+)(?=[\s,])</value>
             </setting>
             <setting name="DataTypeRegex" serializeAs="String">
-                <value>\sword|byte|resb\s</value>
+                <value>\s(word|byte|res[bw])\s</value>
             </setting>
             <setting name="SyntaxColor" serializeAs="String">
                 <value>Blue</value>
