--- a/Editor/App.config
+++ b/Editor/App.config
@@ -60,22 +60,22 @@ d 1000-1140</value>
                 <value>\s(word|byte|res[bw])\s</value>
             </setting>
             <setting name="SyntaxColor" serializeAs="String">
-                <value>Blue</value>
+                <value>DodgerBlue</value>
             </setting>
             <setting name="LabelColor" serializeAs="String">
-                <value>Brown</value>
+                <value>Lime</value>
             </setting>
             <setting name="RegisterColor" serializeAs="String">
                 <value>Red</value>
             </setting>
             <setting name="IntegerColor" serializeAs="String">
-                <value>Orange</value>
+                <value>Gold</value>
             </setting>
             <setting name="DecColor" serializeAs="String">
-                <value>Green</value>
+                <value>BlueViolet</value>
             </setting>
             <setting name="DataTypeColor" serializeAs="String">
-                <value>DarkCyan</value>
+                <value>Aqua</value>
             </setting>
             <setting name="CodeBackColor" serializeAs="String">
                 <value>Black</value>
@@ -87,10 +87,10 @@ d 1000-1140</value>
                 <value>8</value>
             </setting>
             <setting name="ConsoleBackColor" serializeAs="String">
-                <value>Blue</value>
+                <value>Black</value>
             </setting>
             <setting name="ConsoleForeColor" serializeAs="String">
-                <value>White</value>
+                <value>Lime</value>
             </setting>
         </ASMSharp.Properties.Settings>
         <SIC_Editor.Properties.Settings>
