--- a/Editor/App.config
+++ b/Editor/App.config
@@ -5,6 +5,10 @@
             <section name="ASMSharp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <startup>
+      <supportedRuntime version="v4.0"/>
+      <supportedRuntime version="v2.0.50727"/>
+    </startup>
     <userSettings>
         <ASMSharp.Properties.Settings>
             <setting name="ColCellCountArray" serializeAs="String">
