Updated SIC/XE syntax. Fixed syntax coloring issues. Line numbers sync better. Fixed form closing code.

--- a/Editor/App.config
+++ b/Editor/App.config
@@ -48,7 +48,7 @@ d 1000-1140</value>
                 <value>(?&lt;=\n)[^\s]+(?=\s)</value>
             </setting>
             <setting name="RegisterRegex" serializeAs="String">
-                <value>(?&lt;=[\s,\.])([axbflsti]|ch|xr)(?=[\s,])</value>
+                <value>(?&lt;=[\s,])([axbflsti]|ch|xr)(?=[\s,])</value>
             </setting>
             <setting name="IntegerRegex" serializeAs="String">
                 <value>(?&lt;=[\s#])([-0-9]+)(?=[\s,])</value>
@@ -91,6 +91,18 @@ d 1000-1140</value>
             </setting>
             <setting name="ConsoleForeColor" serializeAs="String">
                 <value>Lime</value>
+            </setting>
+            <setting name="StringColor" serializeAs="String">
+                <value>Crimson</value>
+            </setting>
+            <setting name="StringRegex" serializeAs="String">
+                <value>(?&lt;=c)(['][^']+['])</value>
+            </setting>
+            <setting name="HexColor" serializeAs="String">
+                <value>OrangeRed</value>
+            </setting>
+            <setting name="HexRegex" serializeAs="String">
+                <value>(?&lt;=x)(['][^']+['])</value>
             </setting>
         </ASMSharp.Properties.Settings>
     </userSettings>
