Recently opened. TODO: Separately handle lines with erros in the formatter.

--- a/Editor/App.config
+++ b/Editor/App.config
@@ -104,6 +104,9 @@ d 1000-1140</value>
             <setting name="HexRegex" serializeAs="String">
                 <value>(?&lt;=x)(['][^']+['])</value>
             </setting>
+            <setting name="RecentlyOpened" serializeAs="String">
+                <value />
+            </setting>
         </ASMSharp.Properties.Settings>
     </userSettings>
 </configuration>
