--- a/Editor/App.config
+++ b/Editor/App.config
@@ -34,6 +34,7 @@
             </setting>
             <setting name="SIMInput" serializeAs="String">
                 <value>s
+%brkpts%
 r
 d r
 d 1000-1140</value>
