Windows 7 bug with (.bat) file. Operation moved inside the SICExecuter.

--- a/Editor/App.config
+++ b/Editor/App.config
@@ -40,7 +40,7 @@ d r
 d 1000-1140</value>
             </setting>
             <setting name="ASMScript" serializeAs="String">
-                <value>Rename.bat</value>
+                <value />
             </setting>
             <setting name="SyntaxRegex" serializeAs="String">
                 <value>\s(a(d(d[r]?)|nd)|c(lear|o(m(p[r]?)))|d(i(v[r]?))|end|j(eq|gt|lt|sub)?|l(d(a|b|ch|l|s|t|x))|m(u(l[r]?))|or|r(d|mo|sub)|s(h(i(f(t[lr])))|t(a(rt)?|b|ch|l|s|t|x)|u(b[r]?))|t(d|i(x[r]?))|wd)\s</value>
